cambio logo home

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </header>
 
 <body>
-<a href="info.html"><img src="img/logo.png " class="imagen-central" alt=""></a>
+<a href="info.html"><img src="./img/LOGO.jpg" class="imagen-central" alt=""></a>
 
 </body>
